# loopz

./: .gitignore  LICENSE  README.md  pyproject.toml
loopz/: __init__.py  decorator.py  tracker.py
tests/: test_hard.py
