[build-system]
requires      = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "loopz"
version         = "1.0.0"
description     = "Never lose loop progress again — auto-saves and resumes any Python loop from exactly where it crashed."
readme = { file = "README.md", content-type = "text/markdown" }
license         = { file = "LICENSE" }
authors = [{ name = "Shivrajsinh Jadeja", email = "jadejas.k7777@email.com" }]
requires-python = ">=3.8"
keywords        = [
    "checkpoint", "resume", "loop", "crash", "recovery",
    "machine-learning", "training", "progress", "save",
    "colab","data-science","automation","code"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "numpy",
    "torch",
    "scikit-learn",
]

[project.urls]
Homepage    = "https://github.com/Shiv0087/loopz"
Repository  = "https://github.com/Shiv0087/loopz"
"Bug Tracker" = "https://github.com/Shiv0087/loopz/issues"

[tool.setuptools.packages.find]
where   = ["."]
include = ["loopz*"]